force-app/main/default/objects/Add_On_Products__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <formula>TEXT(Account__r.TimezoneDELETE__c)</formula>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>