force-app/main/default/objects/Add_On_Products__c/fields/TPI_Removal_Notes__c.field-meta.xml
<CustomField>
    <fullName>TPI_Removal_Notes__c</fullName>
    <label>TPI Removal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>