force-app/main/default/objects/Add_On_Products__c/fields/Transmission_Method__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Method__c</fullName>
    <description>How is the file transmitted?</description>
    <inlineHelpText>How is the file transmitted?</inlineHelpText>
    <label>Transmission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Automated SFTP</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Paradigm Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>