force-app/main/default/objects/Add_On_Products__c/fields/Trust_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trust_Report_Fee__c</fullName>
    <description>Indicates that client needs to pay additional Trust Report fee (Matrix only)</description>
    <inlineHelpText>Indicates that client needs to pay additional Trust Report fee (Matrix only)</inlineHelpText>
    <label>Trust Report Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>