force-app/main/default/objects/Add_On_Products__c/fields/Trust_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Trust_Report_Received__c</fullName>
    <description>Date Trust Report is received (Matrix plans only)</description>
    <inlineHelpText>Date Trust Report is received (Matrix plans only)</inlineHelpText>
    <label>Trust Report Received</label>
    <type>Date</type>
</CustomField>