force-app/main/default/objects/Add_On_Products__c/fields/Trust_Report_Requested__c.field-meta.xml
<CustomField>
    <fullName>Trust_Report_Requested__c</fullName>
    <description>Date Trust Report is requested (Matrix plans only)</description>
    <inlineHelpText>Date Trust Report is requested (Matrix plans only)</inlineHelpText>
    <label>Trust Report Requested</label>
    <type>Date</type>
</CustomField>