force-app/main/default/objects/Add_On_Products__c/fields/Update_Add_On_Product__c.field-meta.xml
<CustomField>
    <fullName>Update_Add_On_Product__c</fullName>
    <label>Update Add-On Product</label>
    <type>Date</type>
</CustomField>