force-app/main/default/objects/Add_On_Products__c/fields/Vendor_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contract_Received__c</fullName>
    <label>Vendor Contract Received</label>
    <type>Date</type>
</CustomField>