force-app/main/default/objects/Add_On_Products__c/fields/Verified_1st_Payroll_Processed__c.field-meta.xml
<CustomField>
    <fullName>Verified_1st_Payroll_Processed__c</fullName>
    <label>Verified 1st Payroll Processed</label>
    <type>Date</type>
</CustomField>