force-app/main/default/objects/Add_On_Products__c/fields/Verify_Data_Point_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Verify_Data_Point_Accuracy__c</fullName>
    <description>Data from EPS Survey</description>
    <inlineHelpText>Client acknowledged EPS Survey data points are critical to operation</inlineHelpText>
    <label>Verify Data Point Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>