force-app/main/default/objects/Add_On_Products__c/fields/Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent__c</fullName>
    <description>Date Welcome Email with instructional PDF sent to Sponsor</description>
    <inlineHelpText>Date Welcome Email with instructional PDF sent to Sponsor</inlineHelpText>
    <label>Welcome Email Sent</label>
    <type>Date</type>
</CustomField>