force-app/main/default/objects/Add_On_Products__c/fields/X1st_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Bill_Date__c</fullName>
    <description>Date client will be billed for first time</description>
    <inlineHelpText>Date client will be billed for first time</inlineHelpText>
    <label>1st Bill Date</label>
    <type>Date</type>
</CustomField>