force-app/main/default/objects/Add_On_Products__c/fields/X1st_Payroll_Expected__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payroll_Expected__c</fullName>
    <description>Date first Payroll is expected after new product or integration is established.</description>
    <inlineHelpText>Date first Payroll is expected after new product or integration is established.</inlineHelpText>
    <label>1st Payroll Expected</label>
    <type>Date</type>
</CustomField>