force-app/main/default/objects/Add_On_Products__c/fields/X1st_Payroll_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payroll_Funded_Date__c</fullName>
    <description>Date that 1st payroll funded</description>
    <inlineHelpText>Date that 1st payroll funded</inlineHelpText>
    <label>1st Payroll Funded Date</label>
    <type>Date</type>
</CustomField>