force-app/main/default/objects/Add_On_Products__c/fields/X1st_Payroll_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payroll_Uploaded__c</fullName>
    <description>Date 1st Payroll Uploaded into Paradigm after new product or integration is established.</description>
    <inlineHelpText>Date 1st Payroll Uploaded into Paradigm after new product or integration is established.</inlineHelpText>
    <label>1st Payroll Uploaded</label>
    <type>Date</type>
</CustomField>