force-app/main/default/objects/Add_On_Products__c/fields/X2nd_Payroll_Funded__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Payroll_Funded__c</fullName>
    <description>Did the second Payroll successfully fund?</description>
    <inlineHelpText>Did the second Payroll successfully fund?</inlineHelpText>
    <label>2nd Payroll Funded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>