force-app/main/default/objects/Add_On_Products__c/fields/X2nd_Payroll_Next_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Payroll_Next_Check_Date__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Check date of 2nd upcoming payroll</inlineHelpText>
    <label>2nd Payroll Next Check Date</label>
    <type>Date</type>
</CustomField>