force-app/main/default/objects/Add_On_Products__c/fields/X2nd_Payroll_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Payroll_Uploaded__c</fullName>
    <description>Date 2nd Payroll Uploaded into Paradigm</description>
    <inlineHelpText>Date 2nd Payroll Uploaded into Paradigm</inlineHelpText>
    <label>2nd Payroll Uploaded</label>
    <type>Date</type>
</CustomField>