force-app/main/default/objects/Add_On_Products__c/fields/X360_Attribute_turned_off__c.field-meta.xml
<CustomField>
    <fullName>X360_Attribute_turned_off__c</fullName>
    <label>360 Attribute turned off</label>
    <type>Date</type>
</CustomField>