force-app/main/default/objects/Add_On_Products__c/fields/X360_File_to_Provider__c.field-meta.xml
<CustomField>
    <fullName>X360_File_to_Provider__c</fullName>
    <description>Date test file is sent to provider for 360 Integration</description>
    <inlineHelpText>Date test file is sent to provider for 360 Integration</inlineHelpText>
    <label>360 File to Provider</label>
    <type>Date</type>
</CustomField>