force-app/main/default/objects/Add_On_Products__c/fields/X360_File_to_Provider_Box__c.field-meta.xml
<CustomField>
    <fullName>X360_File_to_Provider_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>360 File to Provider</label>
    <type>Checkbox</type>
</CustomField>