force-app/main/default/objects/Add_On_Products__c/fields/X3rd_Payroll_Next_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Payroll_Next_Check_Date__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Check Date for 3rd upcoming payroll</inlineHelpText>
    <label>3rd Payroll Next Check Date</label>
    <type>Date</type>
</CustomField>