force-app/main/default/objects/Add_On_Products__c/fields/X5500_Sent__c.field-meta.xml
<CustomField>
    <fullName>X5500_Sent__c</fullName>
    <description>Form 5500 sent to client for signature</description>
    <inlineHelpText>Form 5500 sent to client for signature</inlineHelpText>
    <label>5500 Sent</label>
    <type>Date</type>
</CustomField>