force-app/main/default/objects/Add_On_Products__c/fields/X5500_Signed__c.field-meta.xml
<CustomField>
    <fullName>X5500_Signed__c</fullName>
    <description>Date 5500 signed by client</description>
    <inlineHelpText>Date 5500 signed by client</inlineHelpText>
    <label>5500 Signed</label>
    <type>Date</type>
</CustomField>