force-app/main/default/objects/Add_On_Products__c/recordTypes/Annual_Audit.recordType-meta.xml
<RecordType>
    <fullName>Annual_Audit</fullName>
    <active>true</active>
    <description>Record type for Annual Audit Add-On Object</description>
    <label>Annual Audit</label>
</RecordType>