force-app/main/default/objects/Add_On_Products__c/recordTypes/CensiblyYours.recordType-meta.xml
<RecordType>
    <fullName>CensiblyYours</fullName>
    <active>true</active>
    <description>Record Type for CensiblyYours Add-On products</description>
    <label>CensiblyYours</label>
</RecordType>