force-app/main/default/objects/Add_On_Products__c/recordTypes/Direct_Integration.recordType-meta.xml
<RecordType>
    <fullName>Direct_Integration</fullName>
    <active>true</active>
    <description>Add-On Object Record Type for Direct Integration information with Partners</description>
    <label>Direct Integration</label>
</RecordType>