force-app/main/default/objects/Add_On_Products__c/recordTypes/Edukate.recordType-meta.xml
<RecordType>
    <fullName>Edukate</fullName>
    <active>true</active>
    <label>Edukate</label>
</RecordType>