force-app/main/default/objects/Add_On_Products__c/recordTypes/Enhanced_Payroll_Services.recordType-meta.xml
<RecordType>
    <fullName>Enhanced_Payroll_Services</fullName>
    <active>true</active>
    <description>Enhanced Payroll Services Add-On Product</description>
    <label>Enhanced Payroll Services</label>
</RecordType>