force-app/main/default/objects/Add_On_Products__c/recordTypes/Payroll_Integration.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Integration</fullName>
    <active>true</active>
    <description>Add-On Object Record Type for Payroll Integration information with Partners</description>
    <label>Payroll Integration</label>
</RecordType>